fix(VSlider,VSelect): hide input on IE and android
see 37c9e53

--- a/src/stylus/components/_sliders.styl
+++ b/src/stylus/components/_sliders.styl
@@ -102,6 +102,8 @@ rtl(v-slider-rtl, "v-input--slider")
     opacity: 0
     padding: 0
     width: 100%
+    font-size: 0
+    min-height: 32px
 
 /** Thumb/Track/Ticks */
 .v-slider
